# political-deepfake-uncertainty

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: exp_base.yaml  political_keywords.yaml
scripts/eval/: 01_predict_det.py  02_metrics_table.py  03_temperature_scaling.py  04_mc_dropout.py
scripts/results/: 5_1_confusion_matrices.py  5_2_roc.py  5_4_score_hist.py  5_5_reliability.py  5_8_entropy_sep.py  5_9_uncertainty_error_roc.py
scripts/train/: 01_train.py
src/polideep/: checkpoint.py  eval.py  train.py
src/polideep/calibration/: temperature.py
src/polideep/metrics/: calibration.py  classification.py
src/polideep/models/: backbones.py
src/polideep/plots/: cm.py  figures.py  uncertainty.py
src/polideep/stats/: bootstrap.py
src/polideep/uncertainty/: mc_dropout.py
src/polideep/utils/: device.py  io.py  seed.py
